updated conf file and added gitignore

--- a/networkmap.conf
+++ b/networkmap.conf
@@ -4,9 +4,9 @@ pollingInterval = 10000
 checkRevocation = false
 
 database {
-    driverClassName = "org.postgresql.Driver"
-    jdbcDriver = "drivers/postgresql-42.2.9.jar"
-    url = "jdbc:postgresql://127.0.0.1:5432/nmap"
+    driverClassName = "org.h2.Driver"
+    jdbcDriver = ""
+    url = "jdbc:h2:file:./h2/networkmap-persistence;DB_CLOSE_ON_EXIT=FALSE;LOCK_TIMEOUT=10000;WRITE_DELAY=0;AUTO_SERVER_PORT=0"
     user = "nmapuser"
     password = "password"
     # schema = cenm_schema
@@ -33,31 +33,31 @@ identityManager = {
     ssl = {
         keyStore = {
             location = "./certificates/corda-ssl-network-map-keys.jks"
-            password = password
+            password = "password"
         }
         trustStore = {
             location = "./certificates/corda-ssl-trust-store.jks"
-            password = trustpass
+            password = "trustpass"
         }
     }
 }
 
 revocation = {
-    host = 127.0.0.1
+    host = "127.0.0.1"
     port = 5052
     ssl = {
         keyStore = {
             location = "./certificates/corda-ssl-network-map-keys.jks"
-            password = password
+            password = "password"
         }
         trustStore = {
             location = "./certificates/corda-ssl-trust-store.jks"
-            password = trustpass
+            password = "trustpass"
         }
     }
 }
 
-shell {
+shell = {
     sshdPort = 2225
     user = "testuser"
     password = "password"
