updated config file

--- a/networkmap.conf
+++ b/networkmap.conf
@@ -3,7 +3,7 @@ address = "127.0.0.1:20000"
 pollingInterval = 10000
 checkRevocation = false
 
-database {
+database = {
     driverClassName = "org.h2.Driver"
     jdbcDriver = ""
     url = "jdbc:h2:file:./h2/networkmap-persistence;DB_CLOSE_ON_EXIT=FALSE;LOCK_TIMEOUT=10000;WRITE_DELAY=0;AUTO_SERVER_PORT=0"
@@ -28,7 +28,7 @@ enmListener = {
 }
 
 identityManager = {
-    host = 127.0.0.1
+    host = "127.0.0.1"
     port = 5051
     ssl = {
         keyStore = {
