Updated config files
- added placeholder for notary in networkparameters
- disabled cenm shell and enabled admin listener

--- a/networkparameters.conf
+++ b/networkparameters.conf
@@ -1,5 +1,8 @@
 notaries : [
-
+	{
+		notaryNodeInfoFile: "INSERT_NODE_INFO_FILE_NAME_HERE"
+		validating = false
+	}
 ]
 
 minimumPlatformVersion = 4
