--- a/networkmap.conf
+++ b/networkmap.conf
@@ -57,9 +57,35 @@ revocation = {
     }
 }
 
-shell = {
-    sshdPort = 2225
-    user = "testuser"
-    password = "password"
+# shell = {
+#     sshdPort = 2225
+#     user = "testuser"
+#     password = "password"
+# }
+
+authObjectId=1
+authServiceConfig = {
+    disableAuthentication=false
+    host=127.0.0.1
+    port=8081
+    trustStore = {
+        location = ./certificates/corda-ssl-trust-store.jks
+        password = trustpass
+    }
+    issuer="http://test"
+    leeway=5s
 }
 
+adminListener = {
+    port = 5055
+    ssl = {
+        keyStore = {
+            location = ./certificates/corda-ssl-network-map-keys.jks
+            password = password
+        }
+        trustStore = {
+            location = ./certificates/corda-ssl-trust-store.jks
+            password = trustpass
+        }
+    }
+}
